--- a/vignettes/foram_intro.Rmd
+++ b/vignettes/foram_intro.Rmd
@@ -36,24 +36,16 @@ The input data should be formatted with 8 columns and n row(s), with columns ord
 
 You must indicate which modern species' d11B vital effects are to be applied for each row of d11B data - this goes in the d11Bspec column. Use abbreviations including: `Grub` (*G. ruber*), `Tsac` (*T. sacculifer*), `Ouni` (*O. universa*), `custom` (specify values below using `priors_foram_adj` function), or `borate`.
 
-Here, we'll use low resolution ODP Site 1209 PETM data as an example, and load it directly as a data frame. To load from a .csv or .xlsx, simply provide the file path from the directory in quotes for the `foram_data` argument in the `load_foram` function instead of a data frame. 
-
-For example, when you use this function on other data stored as .csv, you would use this code snippet: `lf_out <- load_foram(foram_data = "path/to/your/file.csv")` instead of what is in the code chunk directly below. For this example, let's just run the chunk below using a data frame. 
+Here, we'll use low resolution ODP Site 1209 PETM data as an example and load it as a .csv. This .csv is stored as a system file in the package. For most applications, users should simply provide the file path from the directory to the .csv or .xlsx file in quotes for the `foram_data` argument in the `load_foram` function. Alternatively, users can load a data frame directly. Let's take a look first at the raw data we will be loading. 
+```{r, showData}
+print(read.csv("PETM_VignetteData.csv"))
+```
 
 Blanks or NAs are okay in your data - you do not need to have every measurement for each sample. You can have repeat sample ages for replicates etc., and you may provide d11B data from multiple species. Just indicate which modern species', or `custom`, calibration you'd like to use for each row in d11Bspec. 
 
 Now let's run the `load_foram` function on the input data and save the output as an object called `lf_out` (this will be a list) in the global environment. 
 ```{r, loadData}
-x <- data.frame(c(55956, 55956, 55954, 55932, 55926, 55924, 55901, 55899), 
-                c(14.61, 15.46, NA, 14.49, 14.11, NA, 14.46, 13.94), 
-                c(0.23, 0.22, NA, 0.34, 0.33, NA, 0.21, 0.29), 
-                c("Tsac", "Grub", NA, "Grub", "Tsac", NA, "Grub", "Tsac"), 
-                c(3.26, NA, 3.33, 5.04, NA, 4.83, NA, NA), 
-                c(0.1, NA, 0.1, 0.15, NA, 0.14, NA, NA), 
-                c(NA, NA, NA, -2.14, NA, -1.98, -2.19, -1.99), 
-                c(NA, NA, NA, 0.16, NA, 0.16, 0.16, 0.16))
-
-lf_out <- load_foram(foram_data = x)
+lf_out <- load_foram(foram_data = "PETM_VignetteData.csv")
 ```
 
 
